# appel-modern-compiler-haskell

./: .gitignore  README.md  cabal.project  hie.yaml  shell.nix
01-introduction/: CHANGELOG.md  introduction.cabal
01-introduction/src/: Exercise01dot01.hs  Program01dot05.hs  StraightLineProgramInterpreter.hs  StraightLineProgramInterpreterToo.hs
01-introduction/test/: TestIntroduction.hs
02-lexical-analysis/: introduction.cabal  lexical-analysis.cabal
02-lexical-analysis/src/: AST.hs  Language.hs  Parser.hs  Parser.y  Symbol.hs  TigerLexer.x  TigerLexerToo.hs  TigerParserHappy.y  lexer.x
02-lexical-analysis/test/: Main.hs  TestLexicalAnalysis.hs  TestTigerParserHappy.hs  testcases
book-material/: book-material.cabal
book-material/src/: Exercise01dot01.hs
testcases/: basic-let-2.tig  basic-let.tig
tiger-lang/: tiger-lang.cabal
tiger-lang/src/: Language.hs  Parser.y  Symbol.hs  TigerLexer.x
tiger-lang/test/: Main.hs  TestLexicalAnalysis.hs  TestTigerParserHappy.hs
