cabal-version:      3.0
name:               introduction
version:            0.1.0.0

library
    exposed-modules: Program01dot05
    build-depends:    base ^>=4.16.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite introduction-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.16.3.0

-- TODO: Possible: workaround for "ld: warning: -undefined dynamic_lookup may not work with chained fixups" compilation warning
-- https://github.com/bazelbuild/bazel/issues/16413#issuecomment-1270603343
