cabal-version:      3.0
name:               introduction
version:            0.1.0.0

library
    default-language: GHC2021
    default-extensions: OverloadedStrings
    exposed-modules:
        Exercise01dot01
      , StraightLineProgramInterpreter
      , StraightLineProgramInterpreterToo
    build-depends:
      base ^>=4.17
      , containers ^>= 0.6
      , text ^>= 2.1
      , mtl
    hs-source-dirs:   src

test-suite test-introduction
    default-language: GHC2021
    default-extensions: OverloadedStrings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          TestIntroduction.hs
    build-depends:
        base ^>= 4.17
      , introduction
      , tasty ^>= 1.4.2
      , tasty-hunit ^>= 0.10.0

-- TODO: Possible: workaround for "ld: warning: -undefined dynamic_lookup may not work with chained fixups" compilation warning
-- https://github.com/bazelbuild/bazel/issues/16413#issuecomment-1270603343
