cabal-version:      3.0
name:               lexical-analysis
version:            0.1.0.0

library
    exposed-modules:
    build-depends:    base ^>=4.16.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

-- test-suite test-introduction
--     default-language: Haskell2010
--     type:             exitcode-stdio-1.0
--     hs-source-dirs:   test
--     main-is:          TestIntroduction.hs
--     build-depends:
--         base ^>=4.16.3.0
--       , tasty ^>= 1.4.2
--       , tasty-hunit ^>= 0.10.0
