cabal-version:      3.0
name:               lexical-analysis
version:            0.1.0.0
extra-source-files:
    src/TigerLexer.x
    test/testcases/test1.tig

library
    exposed-modules:
        TigerLexer
    autogen-modules:
        TigerLexer
    build-depends:
        base ^>= 4.17
      , containers ^>=0.6.5
      , directory ^>=1.3.7
      , array ^>=0.5.4
    hs-source-dirs:   src
    default-language: Haskell2010
    build-tool-depends: alex:alex ^>=3.2.7

test-suite test-lexical-analysis
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          TestLexicalAnalysis.hs
    build-depends:
        base ^>= 4.17
      , lexical-analysis
      , tasty ^>= 1.4.2
      , tasty-hunit ^>= 0.10.0
