cabal-version:      3.0
name:               lexical-analysis
version:            0.1.0.0
extra-source-files:
    src/TigerLexer.x
    src/TigerParserHappy.y
    test/testcases/test1.tig

library
    default-language: GHC2021
    default-extensions: OverloadedStrings
    exposed-modules:
        AST
        TigerLexer
        TigerLexerToo
        TigerParserHappy
        Symbol
    autogen-modules:
        TigerLexer
      , TigerParserHappy
    build-depends:
        base ^>= 4.17
      , containers ^>=0.6.5
      , directory ^>=1.3.7
      , array ^>=0.5.4
      , text >= 2 
      , megaparsec
    hs-source-dirs:   src
    build-tool-depends:
        alex:alex ^>=3.5
      , happy:happy == 1.20.1.1

test-suite test-lexical-analysis
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          TestLexicalAnalysis.hs
    build-depends:
        base ^>= 4.17
      , directory
      , lexical-analysis
      , tasty ^>= 1.4.2
      , tasty-hunit ^>= 0.10.0
      , text >= 2
