cabal-version:      3.0
name:               tiger-lang
version:            0.1.0.0
extra-source-files:
    src/TigerLexer.x
    test/testcases/test1.tig

library
    default-language: GHC2021
    default-extensions: OverloadedStrings
    exposed-modules:
        Language
        Parser
        Symbol
        TigerLexer
        TigerLexerToo
    autogen-modules:
        Parser
        TigerLexer
    build-depends:
        base ^>= 4.17
      , containers ^>=0.6.5
      , directory ^>=1.3.7
      , array ^>=0.5.4
      , text >= 2 
      , megaparsec
    hs-source-dirs:   src
    build-tool-depends:
        alex:alex ^>=3.5
      , happy:happy

test-suite test-lexical-analysis
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          TestLexicalAnalysis.hs
    other-modules:
        TestTigerParserHappy
    build-depends:
        base ^>= 4.17
      , directory
      , tiger-lang
      , tasty ^>= 1.4.2
      , tasty-hunit ^>= 0.10.0
      , text >= 2
